Fix blurry SVG scale on Firefox

--- a/src/app/features/landing/pages/landing/landing.component.css
+++ b/src/app/features/landing/pages/landing/landing.component.css
@@ -103,7 +103,7 @@ section > div {
   }
 
   .svg1 {
-    scale: 3;
+    --scale: 3;
     top: -55px;
     left: -80px;
     --rotate: 94deg;
@@ -111,7 +111,7 @@ section > div {
   }
 
   .svg2 {
-    scale: 2.5;
+    --scale: 2.5;
     top: -20px;
     right: -60px;
     --rotate: 264deg;
@@ -119,7 +119,7 @@ section > div {
   }
 
   .svg3 {
-    scale: 3;
+    --scale: 3;
     bottom: -70px;
     left: -30px;
     --rotate: 38deg;
@@ -127,7 +127,7 @@ section > div {
   }
 
   .svg4 {
-    scale: 4.5;
+    --scale: 4.5;
     bottom: 50px;
     left: -200px;
     --rotate: 351deg;
@@ -135,7 +135,7 @@ section > div {
   }
 
   .svg5 {
-    scale: 4;
+    --scale: 4;
     bottom: -40px;
     left: 260px;
     --rotate: 20deg;
@@ -143,7 +143,7 @@ section > div {
   }
 
   .svg6 {
-    scale: 4.5;
+    --scale: 4.5;
     bottom: 100px;
     left: 365px;
     --rotate: 54deg;
@@ -651,13 +651,13 @@ pre code {
 
 @keyframes float {
   0% {
-    transform: translateY(0px) rotate(var(--rotate));
+    transform: scale(var(--scale)) translateY(0px) rotate(var(--rotate));
   }
   50% {
-    transform: translateY(-5px) rotate(calc(var(--rotate) + 5deg));
+    transform: scale(var(--scale)) translateY(-5px) rotate(calc(var(--rotate) + 5deg));
   }
   100% {
-    transform: translateY(0px) rotate(var(--rotate));
+    transform: scale(var(--scale)) translateY(0px) rotate(var(--rotate));
   }
 }
 
